syntax = "proto3";
option go_package = "github.com/EugeneTsydenov/go-user-service/proto";
package proto;
import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {}
}

message GetUserRequest {
  int64 id = 1;
}

message UserData {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
  google.protobuf.Timestamp created_at = 4;
}

message UpdatedField {
  string username = 2;
  string avatar = 3;
}

message Passwords {
  string old = 2;
  string new = 3;
}

message GetUserResponse {
  UserData userData = 1;
  int32 code = 2;
  string message = 6;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 id = 1;
  int32 code = 2;
  string message = 3;
}

message UpdateUserRequest {
  int64 id = 1;
  UpdatedField updatedField = 4;
}

message UpdateUserResponse {
  UserData updatedUserData = 1;
  int32 code = 5;
  string message = 6;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  int32 code = 1;
  string message = 2;
}

message UpdatePasswordRequest {
  int64 id = 1;
  Passwords passwords = 4;
}

message UpdatePasswordResponse {
  int32 code = 1;
  string message = 2;
}

message GetAllUsersRequest {
}

message GetAllUsersResponse {
  repeated UserData users = 1;
}
